# bempp-simple-vector-spaces

./: CMakeLists.txt  LICENSE  README.md  integrate_grid_function.cpp  integrate_grid_function.hpp  integrate_grid_function.i  piecewise_constant_vector_space.cpp  piecewise_constant_vector_space.hpp  piecewise_linear_continuous_vector_space.cpp  piecewise_linear_continuous_vector_space.hpp  piecewise_linear_discontinuous_vector_space.cpp  piecewise_linear_discontinuous_vector_space.hpp  piecewise_linear_vector_space.cpp  piecewise_linear_vector_space.hpp  simple_vector_function_value_functor.hpp  simple_vector_shapeset.hpp  simple_vector_space.cpp  simple_vector_space.hpp  simple_vector_spaces.i
